--- a/templates/header.j2
+++ b/templates/header.j2
@@ -1,6 +1,6 @@
 log syslog all;
 
-router id {{ router_id }};
+router id << router_id >>;
 
 roa table rpki {
 }
@@ -8,14 +8,14 @@ roa table rpki {
 protocol kernel {
     scan time 20;
     device routes;
-{% if hostname == "eunetworks-2.router.nl.coloclue.net" %}
+<% if hostname == "eunetworks-2.router.nl.coloclue.net" %>
     export filter {
         if proto = "blackhole1" then reject;
         accept;
     };
-{% else %}
+<% else %>
     export all;
-{% endif %}
+<% endif %>
 }
 
 protocol device {
