--- a/templates/generic_filters.j2
+++ b/templates/generic_filters.j2
@@ -1,4 +1,4 @@
-{% macro export_features() %}
+<% macro export_features() %>
         if ((8283, 2, peerasn) ~ bgp_large_community || (8283, 2, 0) ~ bgp_large_community) then {
             bgp_path.prepend(8283);
         }
@@ -9,7 +9,7 @@
         if ((8283, 4, peerasn) ~ bgp_large_community || (8283, 4, 0) ~ bgp_large_community) then {
             reject;
         }
-{% endmacro %}
+<% endmacro %>
 
 function ebgp_peering_export(int peerasn) {
     if ( is_coloclue_supernet()
@@ -17,7 +17,7 @@ function ebgp_peering_export(int peerasn) {
         || (8283, 0, 2) ~ bgp_large_community
         ) then {
 
-        {{ export_features() }}
+        << export_features() >>
         accept;
     }
     reject;
@@ -29,7 +29,7 @@ function ebgp_upstream_export(int peerasn) {
         || (8283, 0, 2) ~ bgp_large_community
         ) then {
 
-        {{ export_features() }}
+        << export_features() >>
 
         # prevent atom86 from sending route to NTT
         bgp_community.add((8455, 5523));
@@ -45,7 +45,7 @@ function ebgp_upstream_export(int peerasn) {
     
         accept;
     }
-{%- if hostname == "eunetworks-2.router.nl.coloclue.net" %}
+<%- if hostname == "eunetworks-2.router.nl.coloclue.net" %>
     else if proto = "blackhole1" then {
         if (net.len = 32 && is_coloclue_more_specific()) then {
             bgp_community.add((38930,666));   # Fiberring blackhole
@@ -57,7 +57,7 @@ function ebgp_upstream_export(int peerasn) {
         }
         reject;
     }
-{%- endif %}
+<%- endif %>
     reject;
 }
 
@@ -67,7 +67,7 @@ function full_table_export(int peerasn) {
     else if ( is_bogon() ) then reject;
     else if ( bgp_path.last = 8283 ) then reject;
     else {
-        {{ export_features () }}
+        << export_features () >>
         accept;
     }
 }
