--- a/templates/interfaces.j2
+++ b/templates/interfaces.j2
@@ -1,6 +1,6 @@
 protocol direct {
-    <%- for interface in interfaces %>
+%% for interface in interfaces
     interface "<< interface >>";
-    <%- endfor %>
+%% endfor
 }
 
