Improve rtrsub template

--- a/templates/afi_specific_filters.j2
+++ b/templates/afi_specific_filters.j2
@@ -16,11 +16,12 @@ function is_coloclue_supernet()
 prefix set coloclue;
 {
     coloclue = [
-%% for item in coloclue.supernets 
+%% for item in coloclue.supernets
 %%     if (afi == "ipv4" and "." in item.prefix) or (afi == "ipv6" and ":" in item.prefix)
         <%= item.prefix %>/<%= item.length %>
 <%- if not loop.last %>,<% endif -%>
 <%- if item.comment %>  /* <%= item.comment %> */<% endif -%>
+%%     endif
 %% endfor
     ];
     if net ~ coloclue then return true;
@@ -36,6 +37,7 @@ prefix set coloclue;
         <%= item.prefix %>/<%= item.length %>{<%= item.length %>,<%= maxlength %>}
 <%- if not loop.last %>,<% endif -%>
 <%- if item.comment %>  /* <%= item.comment %> */<% endif -%>
+%%     endif
 %% endfor
     ];
     if net ~ coloclue then return true;
@@ -51,6 +53,7 @@ prefix set bogons;
         <%= item.prefix %>/<%= item.length %>{<%= item.length %>,<%= maxlength %>}
 <%- if not loop.last %>,<% endif -%>
 <%- if item.comment %>  /* <%= item.comment %> */<% endif -%>
+%%     endif
 %% endfor
     ];
     if net ~ bogons then return true;
