--- a/templates/static_routes.j2
+++ b/templates/static_routes.j2
@@ -1,14 +1,12 @@
 protocol static {
-<%- for static in statics
-    if (":" in static.route and afi == "ipv6")
-    or ("." in static.route and afi == "ipv4")
-%>
-    <%- if static.via == "blackhole" %>
+%% for static in statics
+%%     if (":" in static.route and afi == "ipv6") or ("." in static.route and afi == "ipv4")
+%%         if static.via == "blackhole"
     route <%= static.route %> blackhole;
-    <%- else %>
+%%         else
     route <%= static.route %> via <%= static.via %>;
-    <%- endif %>
+%%         endif
     <%- if static.comment %>  /* <%= static.comment %> */<% endif -%>
-    <%- endfor %>
+%% endfor
 }
 
