--- a/templates/static_routes.j2
+++ b/templates/static_routes.j2
@@ -2,11 +2,11 @@ protocol static {
 %% for static in statics
 %%     if (":" in static.route and afi == "ipv6") or ("." in static.route and afi == "ipv4")
 %%         if static.via == "blackhole"
-    route <%= static.route %> blackhole;
+    route <%= static.route %> blackhole; <%- if static.comment %>  /* <%= static.comment %> */<% endif %>
 %%         else
-    route <%= static.route %> via <%= static.via %>;
+    route <%= static.route %> via <%= static.via %>; <%- if static.comment %>  /* <%= static.comment %> */<% endif %>
 %%         endif
-    <%- if static.comment %>  /* <%= static.comment %> */<% endif -%>
+%%     endif
 %% endfor
 }
 
